# todo-app-phase-2

./: FIX_SIGNUP_LOGIN.md  FIX_VERCEL_FETCH_ERROR.md  QUICK_FIX_URDU.md  README.md  TROUBLESHOOTING.md  VERCEL_ENV_SETUP.md  Vercel_Deployment_Guide.md  backend.env  init_db.py  package-lock.json  package.json  run_command.py  test_auth.py  test_auth_functionality.py
.claude/: settings.local.json
.claude/agents/: feature-spec-writer.md
.history/: constitution.md
backend/: .env.example  README.md  alembic.ini  dev.db  fly.toml  pyproject.toml  render.yaml  requirements.txt  test.db  test_fix.py  test_fresh.db  vercel.json
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py
backend/api/: index.py
backend/app/: main.py
backend/app/api/: auth.py  health.py  todos.py
backend/app/core/: auth.py  todo_service.py  user_service.py  utils.py
backend/app/database/: session.py
backend/app/models/: todo.py  user.py
backend/src/: __init__.py  config.py  main.py  migrate.py
backend/src/api/: auth.py  categories.py  deps.py  exceptions.py  tasks.py
backend/src/models/: __init__.py  category.py  database.py  task.py  user.py
backend/src/schemas/: __init__.py  auth.py  category.py  task.py  user.py
backend/src/services/: __init__.py  category_service.py  task_service.py
backend/src/utils/: __init__.py  security.py
backend/tests/: conftest.py  test_auth.py  test_mcp_tools.py  test_tasks.py
frontend/: .env.example  .gitignore  DEPLOYMENT.md  GOOGLE_API_INTEGRATION.md  README.md  package-lock.json  package.json
(+34 files in other folders)
